VTN-6648 - fixed issues where the dropdown wasn't visible on screen.

--- a/packages/veritone-react-common/src/components/FaceEngineOutput/FaceDetectionBox/styles.scss
+++ b/packages/veritone-react-common/src/components/FaceEngineOutput/FaceDetectionBox/styles.scss
@@ -67,17 +67,14 @@
 }
 
 .autoCompleteDropdown {
-  width: 244px;
   display: flex;
   flex-direction: column;
-  position: absolute;
-  z-index: 2;
   max-height: 350px;
 }
 
 .entitySearchInput {
   font-size: 13px !important;
-  padding: 7px 0 9px !important;
+  padding: 0 !important;
 }
 
 .searchResultsList {
